fix logo order on small devices

--- a/files/style2.css
+++ b/files/style2.css
@@ -481,7 +481,7 @@ ul {
     }
     .container-home.top .image {
         margin-top: 0;
-        order: 1;
+        order: 0;
         width: 100%;
         text-align: center;
         padding: 0 10%
